Release 1.20

#78  Parsed update payload objects as resource method parameters
#101 Add supporting of id-value for foreign key value during post and put.
#115 Refactoring of the service layer
#116 UpdateBuilder.mapper(String) and UpdateBuilder.mapper(Property)

Release 1.19

#103 Support for annotation-based stage listeners - select listeners
#110 Refactor Select stage names to be more meaningful
#111 Annotation-based listeners for update chains
#112 Externalizing Processor Chain invocation
#113 UpdateBuilder / UpdateResponse / EntityUpdate refactoring
#114 Collection Document: remove "success":true key, keep it under SenchaAdapter

Release 1.18

#100 LR metadata
#102 Remove DataResponse.queryProperty
#105 SenchaAdapter: filter should disengage if “disabled":true option is passed
#107 Select is run twice within CayenneFetchStage 

Release 1.17

#98 Start weeding out "id is a single attribue" assumption
#99 Refactor RequestParser expression 'workers' to function-like injectable services

Release 1.16

#93 Remove methods deprecated since 1.14
#94 Chain-of-responsibility execution pipeline
#95 refactoring DAO concept to IProcessorFactory
#96 Switching IRequestParser to the use of contexts

Release 1.15

#58 'cayenneExp' positional parameter binding
#88 Error when using 'cayenneExp' with outer joins ending in relationship
#89 ConstraintsBuilder to allow individual attribute and relationship excludes
#91 Expand EntityDAO concept 
#92 Simplify POJO metadata compilation: LR annotations


Release 1.14 2015-03-16

#79 Simplified API to start request processor builders
#80 ILinkRestService and related builders API refactoring for consistency
#81 LinkRestRuntime should implement JAX RS Feature
#82 LinkRestBuilder: a static shortcut for simple LinkRest stack
#83 Start deploying releases to Maven central
#84 Problems with entity attributes of type java.sql.Time
#87 Upgrade to release version of Cayenne

Release 1.13
